# Robotics_Competition_Inmind_Simulation

./: Dockerfile  Dockerfile.base  Dockerfile.pip  README.md  requirements.txt  world.world
log/: latest_list
src/behavior_tree/: CMakeLists.txt  behavior_tree.cpp  behavior_tree.xml
src/control/: CMakeLists.txt  package.xml
src/control/include/control/: gripper_action_server.hpp
src/control/launch/: control_launch.py
src/control/src/: gripper_action_client.cpp  gripper_action_server.cpp  gripper_action_server_main.cpp
src/my_launch_package/: CMakeLists.txt  package.xml
src/my_launch_package/launch/: launch_packages.py
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: params.yaml
src/navigation/include/navigation/: Qr_navigation_node.hpp  can_navigation_node.hpp
src/navigation/launch/: navigation_launch.py
src/navigation/src/: Qr_navigation_node.cpp  can_navigation_node.cpp
src/perception/: package.xml  setup.py
src/perception/launch/: perception_launch.py
src/perception/perception/: Blackband_detector.py  Blue_detector.py  White_detector.py  imagepublisher.py  pepsican_detector.py  qrcode_detector.py
