cmake_minimum_required(VERSION 3.8)
project(navigation)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(OpenCV REQUIRED)
find_package(std_msgs REQUIRED)

# Include directories
include_directories(
  include
  ${OpenCV_INCLUDE_DIRS}
)

# Add executable
add_executable(Qr_navigation_node src/Qr_navigation_node.cpp)
add_executable(can_navigation_node src/can_navigation_node.cpp)

# Link libraries
ament_target_dependencies(Qr_navigation_node
  rclcpp
  sensor_msgs
  geometry_msgs
  cv_bridge
  OpenCV
  std_msgs 
)

# Link libraries
ament_target_dependencies(can_navigation_node
  rclcpp
  sensor_msgs
  geometry_msgs
  cv_bridge
  OpenCV
  std_msgs 
)

# Install targets
install(TARGETS Qr_navigation_node
  DESTINATION lib/${PROJECT_NAME})
install(TARGETS can_navigation_node
  DESTINATION lib/${PROJECT_NAME})

add_executable(initNode src/initNode.cpp)
target_include_directories(initNode PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_compile_features(initNode PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
ament_target_dependencies(
  initNode
  "rclcpp"
  "rclpy"
)

install(TARGETS initNode
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
)
# Install the params.yaml file
install(FILES config/params.yaml
  DESTINATION share/${PROJECT_NAME}/config
)


ament_package()
