<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>0.0.0</version>
  <description>Package for color detection using ROS 2 and OpenCV</description>
  <maintainer email="razanhmede@lau.edu">razanhmede</maintainer>
  <license>MIT</license> 

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>opencv-python</exec_depend>
  
  <exec_depend>inference-sdk</exec_depend> 
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

